--- a/src/components/MapOverlay/Mapoverlay.css
+++ b/src/components/MapOverlay/Mapoverlay.css
@@ -1,4 +1,11 @@
 .card-overlay {
-  width: 100%;
-  height: 150px;
+  align-items: center;
+  justify-content: center;
+  padding: 30px;
+}
+
+.card-overlay-details {
+  display: flex;
+  flex-direction: column;
+  margin-left: -90px;
 }
